# api

./: Cargo.toml
src/: main.rs
src/auth/: google.rs
src/db/: mod.rs  mongodb.rs  state.rs
src/errors/: error.rs
src/middlewares/: admin.rs  jwt.rs  mod.rs
src/models/user/: create.rs  get.rs  user.rs
src/routes/: mod.rs  routes.rs  status.rs
src/routes/user/: create.rs  get.rs  me.rs  mod.rs
src/services/: jwt.rs
