[package]
name = "latens"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0" # Para lidar com erros de forma limpa
axum = "0.7"
serde = { version = "1.0", features = ["derive"] } # Para JSON
serde_json = "1.0"