[package]
name = "latens"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1"
bson = "2.0"
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
oauth2 = "5.0.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.43"
